# LaTensor

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  environment.yml  jscop2tvm.cpp  matmul_cpp  matmul_tvm.py  plot_results.py  run_benchmark.sh
benchmarking/: matmul_cpp  matmul_cpp.cpp  matmul_tvm_tir.py  run_benchmark.sh
benchmarking/unified/: check.sh  matmul_unified  matmul_unified.cpp
claude_gen/: ewise_add.jscop  knowledge.md  matmul.jscop
docs/: LaTeaVM.md
frontend/: CMakeLists.txt  run.sh
frontend/plugin/: CMakeLists.txt
src/: matmul.preopt.ll
src/core/: CMakeLists.txt  clang_format_command.sh  jscop2tvm.py  polly_pass.cpp
src/frontend/: matmul.c
src/frontend/plugin/: for_loop_detector.cpp
src/pipeline/: benchmark.sh  benchmark_polybench.sh  export_tvm.py  latensor.py  latensor.sh  plot_benchmark.py  polly_pass_contract.md  wrapper_template.cpp.in
src/tests/: commands.sh  matmul_naive___%entry.split---%for.cond.cleanup.jscop  run_polybench.sh  run_test.sh
src/tests/attention/: driver.cpp  kernel.cpp
src/tests/matmul_naive/: driver.cpp  jscop2tvm  kernel.cpp  matmul.cpp
src/tests/matmul_tiled/: driver.cpp  kernel.cpp
src/tests/mixed/: driver.cpp  kernel.cpp  sample_frames.txt
src/tests/prop_3_check_non_reduction/: analysis.out  kernel.cpp  kernel_raw.ll
src/tests/pseudo_reduction/: analysis.out  kernel.cpp  kernel_raw.ll
src/tests/reduction_1/: driver.cpp  kernel.cpp
src/tests/reduction_2/: analysis.out  kernel.cpp  kernel_raw.ll
src/tests/reduction_2d/: kernel.cpp
src/tests/reduction_complicated_1/: kernel.cpp
src/tests/scan_array/: driver.cpp  kernel.cpp
src/tests/simple_reduction/: driver.cpp  kernel.cpp  out
src/tests/simple_reduction/build_dir/wrappers/: reduction_1.wrap.cpp
src/tests/spatial_ewise/: kernel.cpp
src/tests/triangular_matmul/: driver.cpp  kernel.cpp
unified/: export_tvm_matmul.py  run_unified.sh
